# PThread-Matrix-Mul

./: CMakeLists.txt  README.md  main.cpp
dependencies/: icons.json
dependencies/lib/: forcequest.js
